--- a/node_file/web/index.html
+++ b/node_file/web/index.html
@@ -53,12 +53,12 @@
             </ul>
         </header>
         <!-- action bar -->
-        <div class="action-bar">
+        <!-- <div class="action-bar">
             <ul class="content">
                 <li>Main</li>
             </ul>
             <i class="fas fa-square action-bar-button"></i>
-        </div>
+        </div> -->
         <!-- nav -->
         <div id="menu-select">
             <ul>
