--- a/node_file/web/pages-productlist.html
+++ b/node_file/web/pages-productlist.html
@@ -20,7 +20,7 @@
 						</tr>
 					</thead>
 					<tbody id=list_item>
-						<h3 class="page-title">Ecommerce product-list</h3><br>
+						<!-- <h3 class="page-title">Ecommerce product-list</h3><br> -->
 						
 							<!-- <tr>
 
