--- a/node_file/web/index.html
+++ b/node_file/web/index.html
@@ -235,6 +235,7 @@
     </div>
     
     <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="js/pages-login-name.js"></script>
     
 </body>
 
