--- a/node_file/web/index.html
+++ b/node_file/web/index.html
@@ -41,9 +41,9 @@
                    <!-- <form method="post" action="/process/login">
                     -->
                     <div id = "login__main_benner"> 
-                        <form method="GET" id ="login__main_benner1" action="/login"> 
-                            <!-- <a href="pages-login.html">Login</a> -->
-                         </form>    
+                        <!-- <form method="GET" id ="login__main_benner1" action="/login"> 
+                            <a href="pages-login.html">Login</a>
+                         </form>     -->
                     </div>
                     <!-- <div id = "logout">
                         <a href="pages-login.html">Login</a>    
