--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -24,7 +24,7 @@
 			<span class="logo"><img src="images/logo.svg" alt="" /></span>
 		</a>
 			<h1>Ls IoT</h1>
-			<p>Just another free, fully responsive site template<br /></p>
+			<p>Just another free, Control multiple objects with one system<br /></p>
 				<a href="#zero" class="button big wide smooth-scroll" id="buttons1">   Next    </a>
 		</header>
 		
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/1.jpg" alt="" />
 						</div>
 					</section>
 
@@ -57,7 +57,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/국내 물류센터.PNG" alt="" />
 						</div>
 					</section>
 
@@ -71,7 +71,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/AI.jpg" alt="" />
 						</div>
 					</section>
 
@@ -85,7 +85,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/물류관리.jpg" alt="" />
 						</div>
 					</section>
 
