--- a/node_file/web/use/_share/share.html
+++ b/node_file/web/use/_share/share.html
@@ -12,7 +12,7 @@
 	<div class="main share">
 		<!-- header -->
 		<header id="main-header" class="main">    
-			<a href="../../index.html"><img class="logo" src="../../images/logo/logo_transparent_wide.png">
+			<a href="../../index.html"><img class="logo" src="../../images/logo/logo2.png">
 				<img class="logo-mini" src="../../images/logo/logo_transparent_mini.png"></a>
 			<!-- <div class="location">ss</div> -->
 			<ul class="menu-bar">
@@ -52,7 +52,7 @@
 				<div class="banner-font">
 					<span>스마트한 기술 스마트한 우리</span>
 					<span>사물인터넷으로 만들어가는 미래</span>
-					<span class="banner-sub">Clean IoT</span>
+					<span class="banner-sub">LS IoT</span>
 				</div>
 				<ul class="banner-button-box">
 					<li>자유 게시판</li>
