--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -189,7 +189,7 @@
                             <a href="#" id="jkhajax-2"><i class="mdi ion-clipboard"></i><span>제품목록</span></a>
                         </li>
                         <li>
-                            <a href="#" id="jkhajax-3"><i class="mdi ion-ios7-cart"></i><span>제품구입</span></a>
+                            <a href="#" id="jkhajax-3"><i class="mdi ion-ios7-cart"></i><span>제품발주</span></a>
                         </li>
                         <li>
                             <a href="#" id="jkhajax-4"><i class="mdi ion-android-note"></i><span>제품구매확인</span></a>
