--- a/node_file/web/pages-productbuy.html
+++ b/node_file/web/pages-productbuy.html
@@ -19,12 +19,12 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6">
+                        <!-- <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="productdesc">Product Description</label>
                                 <textarea class="form-control" id="productdesc" rows="5"></textarea>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="row">
@@ -45,8 +45,10 @@
                                     <option value="AK">Alaska</option>
                                     <option value="HI">Hawaii</option>
                                 </select>
+                                <button type="submit" class="btn btn-success waves-effect waves-light">Save Changes</button>
+                                <button type="submit" class="btn btn-secondary waves-effect">Cancel</button>
                             </div>
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label class="control-label">Features</label>
 
                                 <select class="select2 form-control select2-multiple" multiple="multiple" data-placeholder="Choose ...">
@@ -58,10 +60,10 @@
                                     <option value="WA">Washington</option>
                                 </select>
 
-                            </div>
+                            </div> -->
                         </div>
 
-                        <div class="col-sm-6">
+                        <!-- <div class="col-sm-6">
                             <div class="form-group">
                                 <label>Product Image</label> <br>
                                 <img src="assets/images/products/1.jpg" alt="product img" class="img-fluid" style="max-width: 200px;">
@@ -69,16 +71,14 @@
                                 <button type="button" class="btn btn-purple m-t-10 waves-effect waves-light">Change Image</button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <button type="submit" class="btn btn-success waves-effect waves-light">Save Changes</button>
-                    <button type="submit" class="btn btn-secondary waves-effect">Cancel</button>
                 </form>
 
             </div>
         </div>
 
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-body">
 
                 <h4 class="mt-0 header-title">Meta Data</h4>
@@ -111,13 +111,13 @@
                 </form>
 
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
 
 <script src="assets/plugins/select2/js/select2.min.js" type="text/javascript"></script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 $(".select2").select2();
-</script>
+</script> -->
 </body>
