--- a/node_file/web/pages-statistics.html
+++ b/node_file/web/pages-statistics.html
@@ -7,7 +7,7 @@
 
     <div class="container-fluid" id="result"></div><link rel="stylesheet" href="./assets/css/morris.css">
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-6">
             <div class="card m-b-20">
                 <div class="card-body">
@@ -33,7 +33,7 @@
 
                 </div>
             </div>
-        </div> 
+        </div>  -->
 
         <div class="col-lg-6">
             <div class="card m-b-20">
