--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -95,54 +95,54 @@
                             </div> -->
                         </li>
                         <!-- notification-->
-                        <li class="list-inline-item dropdown notification-list">
+                        <!-- <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#"
                                 role="button" aria-haspopup="false" aria-expanded="false">
                                 <i class="ion-ios7-bell noti-icon"></i>
                                 <span class="badge badge-danger noti-icon-badge">3</span>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg">
+                            <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg"> -->
                                 <!-- item-->
-                                <div class="dropdown-item noti-title">
+                                <!-- <div class="dropdown-item noti-title">
                                     <h5>Notification (2)</h5>
-                                </div>
+                                </div> -->
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item active">
+                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item active">
                                     <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
                                     <p class="notify-details"><b>Your order is placed</b><small class="text-muted">Dummy
                                             text of the printing and typesetting industry.</small></p>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
                                     <p class="notify-details"><b>New Message received</b><small class="text-muted">You
                                             have 87 unread messages</small></p>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     <div class="notify-icon bg-info"><i class="mdi mdi-martini"></i></div>
                                     <p class="notify-details"><b>Your item is shipped</b><small class="text-muted">It is
                                             a long established fact that a reader will</small></p>
-                                </a>
+                                </a> -->
 
                                 <!-- All-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <!-- <a href="javascript:void(0);" class="dropdown-item notify-item">
                                     View All
                                 </a>
 
                             </div>
-                        </li>
+                        </li> -->
                         <!-- User-->
                         <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
                                 href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                                <img src="assets/images/users/avatar-1.jpg" alt="user" class="rounded-circle">
+                                <i class="mdi ion-android-social-user"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
-                                <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
+                                <!-- <a class="dropdown-item" href="#"><i class="dripicons-user text-muted"></i> Profile</a>
                                 <a class="dropdown-item" href="#"><i class="dripicons-wallet text-muted"></i> My
                                     Wallet</a>
                                 <a class="dropdown-item" href="#"><span
@@ -150,7 +150,7 @@
                                         class="dripicons-gear text-muted"></i> Settings</a>
                                 <a class="dropdown-item" href="#"><i class="dripicons-lock text-muted"></i> Lock
                                     screen</a>
-                                <div class="dropdown-divider"></div>
+                                <div class="dropdown-divider"></div> -->
                                 <a class="dropdown-item" href="#"><i class="dripicons-exit text-muted"></i> Logout</a>
                             </div>
                         </li>
