--- a/node_file/web/pages-productbuy.html
+++ b/node_file/web/pages-productbuy.html
@@ -10,11 +10,27 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                <label for="productname">Product Name</label>
-                                <input id="productname" name="productname" type="text" class="form-control">
+                                <label for="productname">제품 이름</label>
+                                <!-- <input id="productname" name="productname" type="text" class="form-control"> -->
+                                <select class="form-control select2"id=listitem>
+                                    <!-- <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option>
+                                    <option value="AK">Alaska</option>
+                                    <option value="HI">Hawaii</option> -->
+                                </select>
                             </div>
                             <div class="form-group">
-                                <label for="manufacturername">Manufacturer Name</label>
+                                <label for="manufacturername">제품 수량</label>
                                 <input id="manufacturername" name="manufacturername" type="text" class="form-control">
                             </div>
                         </div>
@@ -29,24 +45,24 @@
 
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="manufacturerbrand">Manufacturer Brand</label>
                                 <input id="manufacturerbrand" name="manufacturerbrand" type="text" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="price">Price</label>
                                 <input id="price" name="price" type="text" class="form-control">
-                            </div>
+                            </div> -->
 
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label class="control-label">Category</label>
                                 <select class="form-control select2">
                                     <option>Select</option>
                                     <option value="AK">Alaska</option>
                                     <option value="HI">Hawaii</option>
-                                </select>
-                                <button type="submit" class="btn btn-success waves-effect waves-light">Save Changes</button>
-                                <button type="submit" class="btn btn-secondary waves-effect">Cancel</button>
+                                </select> -->
+                                <button type="submit" id=order  class="btn btn-success waves-effect waves-light">발주 신청</button>
+                                <button type="submit" id=cancel class="btn btn-secondary waves-effect">취소</button>
                             </div>
                             <!-- <div class="form-group">
                                 <label class="control-label">Features</label>
@@ -116,7 +132,7 @@
 </div>
 
 <script src="assets/plugins/select2/js/select2.min.js" type="text/javascript"></script>
-
+<script src="js/pages-ajax-productbuylist.js"></script>
 <!-- <script type="text/javascript">
 $(".select2").select2();
 </script> -->
