--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -43,7 +43,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo-sm2.png" alt="" height="50">
+                        <img src="assets/images/logo-sm2.png" alt="" height="30">
                     </a>
 
                 </div>
@@ -62,11 +62,11 @@
 
                     <ul class="list-inline float-right mb-0">
                         <!-- Search -->
-                        <li class="list-inline-item dropdown notification-list">
+                        <!-- <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link waves-effect toggle-search" href="#" data-target="#search-wrap">
                                 <i class="mdi mdi-magnify noti-icon"></i>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- Fullscreen -->
                         <li class="list-inline-item dropdown notification-list hide-phone">
                             <a class="nav-link waves-effect" href="#" id="btn-fullscreen">
