--- a/node_file/web/pages-orderhistory.html
+++ b/node_file/web/pages-orderhistory.html
@@ -70,28 +70,28 @@
                                 <th>Order ID</th>
                                 <th>Amount</th>
                                 <th>Order Date</th>
-                                <th>Payment</th>
-                                <th>Billing Name</th>
-                                <th>Status</th>
+                                <!-- <th>Payment</th> -->
+                                <th>Name</th>
+                                <!-- <th>Status</th> -->
                                 <th>Action</th>
                             </tr>
                             </thead>
-                            <tbody>
+                            <tbody id = list_item>
                             <tr>
                                 <td>
                                     <a href="#" class="font-600 text-muted">#98541201</a>
                                 </td>
                                 <td>$45</td>
                                 <td>Jul 20, 2017</td>
-                                <td><i class="fa fa-cc-visa text-muted font-20"></i> </td>
+                                <!-- <td><i class="fa fa-cc-visa text-muted font-20"></i> </td> -->
                                 <td>Herbert C. Patton</td>
-                                <td><span class="badge badge-success">Paid</span></td>
+                                <!-- <td><span class="badge badge-success">Paid</span></td> -->
                                 <td>
-                                    <a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit"><i class="mdi mdi-pencil font-18"></i></a>
-                                    <a href="javascript:void(0);" class="text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"><i class="mdi mdi-close font-18"></i></a>
+                                    <a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit"><i class="mdi ion-android-note"></i></a>
+                                    <!-- <a href="javascript:void(0);" class="text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"><i class="mdi mdi-close font-18"></i></a> -->
                                 </td>
                             </tr>
-                            <tr>
+                            <!-- <tr>
                                 <td>
                                     <a href="#" class="font-600 text-muted">#85124562</a>
                                 </td>
@@ -370,7 +370,7 @@
                                     <a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit"><i class="mdi mdi-pencil font-18"></i></a>
                                     <a href="javascript:void(0);" class="text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"><i class="mdi mdi-close font-18"></i></a>
                                 </td>
-                            </tr>
+                            </tr> -->
 
                             </tbody>
                         </table>
