--- a/node_file/web/pages-productlist.html
+++ b/node_file/web/pages-productlist.html
@@ -17,7 +17,7 @@
 							<th>Amount</th>
 							<th>No. of Units</th>
 							<th>Stock</th>
-							<th>Action</th>
+							<!-- <th>Action</th> -->
 						</tr>
 					</thead>
 					<tbody id=list_item>
