--- a/node_file/web/industry_function.html
+++ b/node_file/web/industry_function.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Admiria - Responsive Flat Admin Dashboard</title>
+    <title>Teamproject</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="Themesbrand" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -43,7 +43,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo-sm.png" alt="" height="30">
+                        <img src="assets/images/logo-sm2.png" alt="" height="30">
                     </a>
 
                 </div>
@@ -62,11 +62,11 @@
 
                     <ul class="list-inline float-right mb-0">
                         <!-- Search -->
-                        <li class="list-inline-item dropdown notification-list">
+                        <!-- <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link waves-effect toggle-search" href="#" data-target="#search-wrap">
                                 <i class="mdi mdi-magnify noti-icon"></i>
                             </a>
-                        </li>
+                        </li> -->
                         <!-- Fullscreen -->
                         <li class="list-inline-item dropdown notification-list hide-phone">
                             <a class="nav-link waves-effect" href="#" id="btn-fullscreen">
