--- a/node_file/web/pages-productbuy.html
+++ b/node_file/web/pages-productbuy.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="manufacturername">제품 수량</label>
-                                <input id="manufacturername" name="manufacturername" type="text" class="form-control">
+                                <input id="manufacturername" name="manufacturername" type="text" id= count class="form-control">
                             </div>
                         </div>
 
@@ -133,6 +133,7 @@
 
 <script src="assets/plugins/select2/js/select2.min.js" type="text/javascript"></script>
 <script src="js/pages-ajax-productbuylist.js"></script>
+<script src="js/pages-ajax-productbuy-order.js"></script>
 <!-- <script type="text/javascript">
 $(".select2").select2();
 </script> -->
