--- a/node_file/web/industry_function.html
+++ b/node_file/web/industry_function.html
@@ -43,7 +43,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo-sm2.png" alt="" height="30">
+                        <img src="assets/images/logo2.png" alt="" height="70" width="300">
                     </a>
 
                 </div>
