--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -43,7 +43,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo-sm2.png" alt="" height="30">
+                        <img src="assets/images/logo2.png" alt="" height="70" width="300">
                     </a>
 
                 </div>
@@ -60,7 +60,7 @@
                         </div>
                     </div>
 
-                    <ul class="list-inline float-right mb-0">
+                    <ul class="list-inline float-right mb-1">
                         <!-- Search -->
                         <!-- <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link waves-effect toggle-search" href="#" data-target="#search-wrap">
@@ -68,7 +68,7 @@
                             </a>
                         </li> -->
                         <!-- Fullscreen -->
-                        <li class="list-inline-item dropdown notification-list hide-phone">
+                        <li class="list-inline-item dropdown notification-list hide-phone" >
                             <a class="nav-link waves-effect" href="#" id="btn-fullscreen">
                                 <i class="mdi mdi-fullscreen noti-icon"></i>
                             </a>
@@ -133,8 +133,9 @@
                                     View All
                                 </a>
 
-                            </div>
-                        </li> -->
+                            </div> -->
+                        <!-- </li>   -->
+                        
                         <!-- User-->
                         <li class="list-inline-item dropdown notification-list">
                             <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
@@ -169,7 +170,7 @@
                 </div>
                 <!-- end menu-extras -->
 
-                <div class="clearfix"></div>
+                <div class="clearfix"> </background-color></div>
 
             </div> <!-- end container -->
         </div>
