--- a/node_file/web/pages-productlist.html
+++ b/node_file/web/pages-productlist.html
@@ -403,10 +403,10 @@
 	
 	<script src="assets/plugins/datatables/dataTables.responsive.min.js"></script>
 	<script src="assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
-	<script type="text/javascript">
+	<!-- <script type="text/javascript">
 		$(document).ready(function () {
 			$('#datatable').DataTable();
 		});
-		</script>
+		</script> -->
 </div>
 <br></br>
