--- a/node_file/web/pages-orderhistory.html
+++ b/node_file/web/pages-orderhistory.html
@@ -388,6 +388,6 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#datatable').DataTable();
+        $('#datatable').DataTable().destroy();
     });
 </script>
