--- a/node_file/web/pages-productbuy.html
+++ b/node_file/web/pages-productbuy.html
@@ -6,32 +6,19 @@
                 <h4 class="mt-0 header-title">Basic Information</h4>
                 <p class="text-muted m-b-30 font-14">Fill all information below</p>
 
-                <form>
+                <!-- <form> -->
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
                                 <label for="productname">제품 이름</label>
                                 <!-- <input id="productname" name="productname" type="text" class="form-control"> -->
                                 <select class="form-control select2"id=listitem>
-                                    <!-- <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option>
-                                    <option value="AK">Alaska</option>
-                                    <option value="HI">Hawaii</option> -->
+                                    <!-- <option value="AK">Alaska</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
                                 <label for="manufacturername">제품 수량</label>
-                                <input id="manufacturername" name="manufacturername" type="text" id= count class="form-control">
+                                <input id="manufacturername" name="manufacturername" type="text" class="form-control">
                             </div>
                         </div>
 
@@ -61,8 +48,8 @@
                                     <option value="AK">Alaska</option>
                                     <option value="HI">Hawaii</option>
                                 </select> -->
-                                <button type="submit" id=order  class="btn btn-success waves-effect waves-light">발주 신청</button>
-                                <button type="submit" id=cancel class="btn btn-secondary waves-effect">취소</button>
+                                <button type="submit" id="order"  class="btn btn-success waves-effect waves-light">발주 신청</button>
+                                <button type="submit" id="cancel" class="btn btn-secondary waves-effect">취소</button>
                             </div>
                             <!-- <div class="form-group">
                                 <label class="control-label">Features</label>
@@ -89,7 +76,7 @@
                         </div>
                     </div> -->
 
-                </form>
+                <!-- </form> -->
 
             </div>
         </div>
