--- a/node_file/web/pages-orderhistory.html
+++ b/node_file/web/pages-orderhistory.html
@@ -1,97 +1,104 @@
 <link href="assets/plugins/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
-       
+
 <link href="assets/plugins/datatables/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="btn-group pull-right">
-                        <ol class="breadcrumb hide-phone p-0 m-0">
-                            <li class="breadcrumb-item"><a href="#">Ecommerce</a></li>
-                            <li class="breadcrumb-item active">Order History</li>
-                        </ol>
-                    </div>
-                    <h4 class="page-title">Order History</h4>
-                </div>
+<div class="row">
+    <div class="col-sm-12">
+        <div class="page-title-box">
+            <div class="btn-group pull-right">
+                <ol class="breadcrumb hide-phone p-0 m-0">
+                    <li class="breadcrumb-item"><a href="#">Ecommerce</a></li>
+                    <li class="breadcrumb-item active">Order History</li>
+                </ol>
             </div>
+            <h4 class="page-title">Order History</h4>
         </div>
-  
-        <div class="row">
-            <div class="col-md-6 col-lg-6 col-xl-3">
-                <div class="mini-stat clearfix bg-white">
-                    <span class="font-40 text-primary mr-0 float-right"><i class="mdi mdi-cart-outline"></i></span>
-                    <div class="mini-stat-info">
-                        <h3 class="counter font-light mt-0">$36,410</h3>
-                    </div>
-                    <div class="clearfix"></div>
-                    <p class=" mb-0 m-t-10 text-muted">Total Orders <span class="pull-right"><i class="fa fa-caret-down text-danger m-r-5"></i>3.25%</span></p>
-                </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 col-lg-6 col-xl-3">
+        <div class="mini-stat clearfix bg-white">
+            <span class="font-40 text-primary mr-0 float-right"><i class="mdi mdi-cart-outline"></i></span>
+            <div class="mini-stat-info">
+                <h3 class="counter font-light mt-0">$36,410</h3>
             </div>
-            <div class="col-md-6 col-lg-6 col-xl-3">
-                <div class="mini-stat clearfix bg-white">
-                    <span class="font-40 text-success mr-0 float-right"><i class="mdi mdi-currency-usd"></i></span>
-                    <div class="mini-stat-info">
-                        <h3 class="counter font-light mt-0">$29,854</h3>
-                    </div>
-                    <div class="clearfix"></div>
-                    <p class=" mb-0 m-t-10 text-muted">Successful Orders <span class="pull-right"><i class="fa fa-caret-up text-success m-r-5"></i>8.51%</span></p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-xl-3">
-                <div class="mini-stat clearfix bg-white">
-                    <span class="font-40 text-warning mr-0 float-right"><i class="mdi mdi-fingerprint"></i></span>
-                    <div class="mini-stat-info">
-                        <h3 class="counter font-light mt-0">$4,512</h3>
-                    </div>
-                    <div class="clearfix"></div>
-                    <p class=" mb-0 m-t-10 text-muted">Refunds <span class="pull-right"><i class="fa fa-caret-down text-danger m-r-5"></i>5.52%</span></p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-xl-3">
-                <div class="mini-stat clearfix bg-white">
-                    <span class="font-40 text-danger mr-0 float-right"><i class="mdi mdi-rotate-right"></i></span>
-                    <div class="mini-stat-info">
-                        <h3 class="counter font-light mt-0">$2,854</h3>
-                    </div>
-                    <div class="clearfix"></div>
-                    <p class=" mb-0 m-t-10 text-muted">Chargebacks <span class="pull-right"><i class="fa fa-caret-up text-success m-r-5"></i>7.10%</span></p>
-                </div>
-            </div>
+            <div class="clearfix"></div>
+            <p class=" mb-0 m-t-10 text-muted">Total Orders <span class="pull-right"><i
+                        class="fa fa-caret-down text-danger m-r-5"></i>3.25%</span></p>
         </div>
+    </div>
+    <div class="col-md-6 col-lg-6 col-xl-3">
+        <div class="mini-stat clearfix bg-white">
+            <span class="font-40 text-success mr-0 float-right"><i class="mdi mdi-currency-usd"></i></span>
+            <div class="mini-stat-info">
+                <h3 class="counter font-light mt-0">$29,854</h3>
+            </div>
+            <div class="clearfix"></div>
+            <p class=" mb-0 m-t-10 text-muted">Successful Orders <span class="pull-right"><i
+                        class="fa fa-caret-up text-success m-r-5"></i>8.51%</span></p>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-6 col-xl-3">
+        <div class="mini-stat clearfix bg-white">
+            <span class="font-40 text-warning mr-0 float-right"><i class="mdi mdi-fingerprint"></i></span>
+            <div class="mini-stat-info">
+                <h3 class="counter font-light mt-0">$4,512</h3>
+            </div>
+            <div class="clearfix"></div>
+            <p class=" mb-0 m-t-10 text-muted">Refunds <span class="pull-right"><i
+                        class="fa fa-caret-down text-danger m-r-5"></i>5.52%</span></p>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-6 col-xl-3">
+        <div class="mini-stat clearfix bg-white">
+            <span class="font-40 text-danger mr-0 float-right"><i class="mdi mdi-rotate-right"></i></span>
+            <div class="mini-stat-info">
+                <h3 class="counter font-light mt-0">$2,854</h3>
+            </div>
+            <div class="clearfix"></div>
+            <p class=" mb-0 m-t-10 text-muted">Chargebacks <span class="pull-right"><i
+                        class="fa fa-caret-up text-success m-r-5"></i>7.10%</span></p>
+        </div>
+    </div>
+</div>
 
 
-        <div class="row">
-            <div class="col-12">
-                <div class="card m-b-20">
-                    <div class="card-body">
-                        <table id="datatable" class="table table-striped dt-responsive nowrap table-vertical" width="100%" cellspacing="0">
-                            <thead>
-                            <tr>
-                                <th>Order ID</th>
-                                <th>Amount</th>
-                                <th>Order Date</th>
-                                <!-- <th>Payment</th> -->
-                                <th>Name</th>
-                                <!-- <th>Status</th> -->
-                                <th>Action</th>
-                            </tr>
-                            </thead>
-                            <tbody id = list_item>
-                            <tr>
-                                <td>
-                                    <a href="#" class="font-600 text-muted">#98541201</a>
-                                </td>
-                                <td>$45</td>
-                                <td>Jul 20, 2017</td>
-                                <!-- <td><i class="fa fa-cc-visa text-muted font-20"></i> </td> -->
-                                <td>Herbert C. Patton</td>
-                                <!-- <td><span class="badge badge-success">Paid</span></td> -->
-                                <td>
-                                    <a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Edit"><i class="mdi ion-android-note"></i></a>
-                                    <!-- <a href="javascript:void(0);" class="text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"><i class="mdi mdi-close font-18"></i></a> -->
-                                </td>
-                            </tr>
-                            <!-- <tr>
+<div class="row">
+    <div class="col-12">
+        <div class="card m-b-20">
+            <div class="card-body">
+                <table id="datatable" class="table table-striped dt-responsive nowrap table-vertical" width="100%"
+                    cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Order ID</th>
+                            <th>Amount</th>
+                            <th>Order Date</th>
+                            <!-- <th>Payment</th> -->
+                            <th>Name</th>
+                            <!-- <th>Status</th> -->
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody id=list_item>
+                        <tr>
+                            <td>
+                                <a href="#" class="font-600 text-muted">#98541201</a>
+                            </td>
+                            <td>$45</td>
+                            <td>Jul 20, 2017</td>
+                            <!-- <td><i class="fa fa-cc-visa text-muted font-20"></i> </td> -->
+                            <td>Herbert C. Patton</td>
+                            <!-- <td><span class="badge badge-success">Paid</span></td> -->
+                            <td>
+                                <a href="javascript:void(0);" class="m-r-15 text-muted" data-toggle="tooltip"
+                                    data-placement="top" title="" data-original-title="Edit"><i
+                                        class="mdi ion-android-note"></i></a>
+                                <!-- <a href="javascript:void(0);" class="text-muted" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete"><i class="mdi mdi-close font-18"></i></a> -->
+                            </td>
+                        </tr>
+                        <!-- <tr>
                                 <td>
                                     <a href="#" class="font-600 text-muted">#85124562</a>
                                 </td>
@@ -372,19 +379,19 @@
                                 </td>
                             </tr> -->
 
-                            </tbody>
-                        </table>
+                    </tbody>
+                </table>
 
-                    </div>
-                </div>
             </div>
         </div>
+    </div>
+</div>
 
 <script src="assets/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
 <script src="assets/plugins/datatables/dataTables.responsive.min.js"></script>
 <script src="assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
-
+<script src="js/pages-ajax-orderhistory.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
