--- a/node_file/web/pages-statistics.html
+++ b/node_file/web/pages-statistics.html
@@ -12,20 +12,13 @@
             <div class="card m-b-20">
                 <div class="card-body">
 
-                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">라인 차트</font></font></h4>
+                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Line Chart</font></font></h4>
 
                     <ul class="list-inline widget-chart m-t-20 m-b-15 text-center">
+                        
                         <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">25610</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">활성화 됨</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">56210</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">보류 중</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">12485</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">비활성화 됨</font></font></p>
+                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">세계 물류로봇 시장규모</font></font></h5>
+                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">단위: Dollar</font></font></p>
                         </li>
                     </ul>
 
@@ -34,78 +27,17 @@
                 </div>
             </div>
         </div> 
-
+ 
         <div class="col-lg-6">
             <div class="card m-b-20">
                 <div class="card-body">
 
-                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">막대 차트</font></font></h4>
+                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dount Chart </font></font></h4>
 
                     <ul class="list-inline widget-chart m-t-20 m-b-15 text-center">
                         <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">6,95,412</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">활성화 됨</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">1,63,542</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">보류 중</font></font></p>
-                        </li>
-                    </ul>
-
-                    <div id="morris-bar-example" style="height: 300px"></div>
-
-                </div>
-            </div>
-        </div> 
-    </div> 
-
-
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="card m-b-20">
-                <div class="card-body">
-
-                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">영역 차트</font></font></h4>
-
-                    <ul class="list-inline widget-chart m-t-20 m-b-15 text-center">
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">86541</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">활성화 됨</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">2541</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">보류 중</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">102030</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">비활성화 됨</font></font></p>
-                        </li>
-                    </ul>
-
-                    <div id="morris-area-example" style="height: 300px"></div>
-
-                </div>
-            </div>
-        </div> 
-
-        <div class="col-lg-6">
-            <div class="card m-b-20">
-                <div class="card-body">
-
-                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">도넛 차트</font></font></h4>
-
-                    <ul class="list-inline widget-chart m-t-20 m-b-15 text-center">
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">3201</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">활성화 됨</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">85120</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">보류 중</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">65214</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">비활성화 됨</font></font></p>
+                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">4차산업의 핵심현황</font></font></h5>
+                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">단위: %</font></font></p>
                         </li>
                     </ul>
 
@@ -121,20 +53,12 @@
             <div class="card m-b-20">
                 <div class="card-body">
 
-                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">영역 차트</font></font></h4>
+                    <h4 class="mt-0 header-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Area Chart</font></font></h4>
 
                     <ul class="list-inline widget-chart m-t-20 m-b-15 text-center">
                         <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">86541</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">활성화 됨</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">2541</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">보류 중</font></font></p>
-                        </li>
-                        <li class="list-inline-item">
-                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">102030</font></font></h5>
-                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">비활성화 됨</font></font></p>
+                            <h5 class="mb-0"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">판매수량</font></font></h5>
+                            <p class="text-muted font-14"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">단위: 개 </font></font></p>
                         </li>
                     </ul>
 
